sourcery-macros/tests/ui/fail/aggregate_missing_error.stderr
error: Missing field `error`
  --> tests/ui/fail/aggregate_missing_error.rs:20:10
   |
20 | #[derive(Aggregate)]
   |          ^^^^^^^^^
   |
   = note: this error originates in the derive macro `Aggregate` (in Nightly builds, run with -Z macro-backtrace for more info)
